# lang-compare-gRPC

./: .gitignore  README.md
cpp/: Makefile  README.md  compile_commands.json  lang_compare.grpc.pb.cc  lang_compare.grpc.pb.h  lang_compare.pb.cc  lang_compare.pb.h  lang_compare_client_tests.cc  lang_compare_server.cc  lib.cc  lib.h  server_example.cc  test_cpp_server.cc
protos/: lang_compare.proto
python/: README.md  build_pb2.sh  client_example.py  config.yaml  lang_compare_client.py  lang_compare_client_tests.py  lang_compare_pb2.py  lang_compare_pb2_grpc.py  lang_compare_server.py  lang_compare_tests.py  lib.py  server_example.py  test_lang_compare_servers.py  test_servers.py  test_servers.sh  test_xor_cipher.py
rust/: Cargo.toml  README.md  build.rs
rust/server/: Cargo.toml  build.rs
rust/server/src/: client.rs  server.rs
rust/src/: server.rs
rust/stub/: Cargo.toml
rust/stub/src/: langcompare.rs  lib.rs  utils.rs
