[package]
name = "stub"
version = "0.1.0"
authors = ["roycrippen <roycrippen@gmail.com>"]
edition = "2018"

[dependencies]
#futures = "0.1"
bytes = "0.4"
#env_logger = { version = "0.5", default-features = false }
#log = "0.4"
#http = "0.1"
prost = "0.5"
#tokio = "0.1"
#tower-request-modifier = "0.1.0"
#tower-hyper = "0.1"
#hyper = "0.12"
tower-grpc = { version = "0.1.0", features = ["tower-hyper"] }
#tower-service = "0.2"
#tower-util = "0.1"

[build-dependencies]
#tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }
prost-build = { version = "0.5" }
